force-app/logger/sfdc-logger/objects/Log_Ada__c/fields/Logged_at__c.field-meta.xml
<CustomField>
    <fullName>Logged_at__c</fullName>
    <description>Time of the event happened</description>
    <label>Logged at</label>
    <type>DateTime</type>
</CustomField>