force-app/logger/sfdc-logger/objects/Log_Ada__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Log Details</description>
    <label>Message</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>