force-app/logger/sfdc-logger/objects/Log_Ada__c/fields/Running_User__c.field-meta.xml
<CustomField>
    <fullName>Running_User__c</fullName>
    <description>User which triggered the Log</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdaLogs</relationshipName>
    <type>Lookup</type>
</CustomField>